apps/cycling-training-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cycling-training-app
  namespace: cycling-training-app
  labels:
    app: cycling-training-app
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: cycling-training-app
